@@ -101,6 +101,8 @@ ringtone.mmf application/x-smaf
 playlist.mrl text/x-mrml
 #  Copied from http://bugzilla.gnome.org/show_bug.cgi?id=518688
 hbo-playlist.qtl application/x-quicktime-media-link
+# Copied from http://bugzilla.gnome.org/show_bug.cgi?id=567142
+playlist.wpl application/vnd.ms-wpl
 
 # text
 text-iso8859-15.txt text/plain ox
