@@ -1,3 +1,9 @@
+2009-01-13  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in:
+	* tests/list:
+	* tests/playlist.wpl: Add the application/vnd.ms-wpl mime-type
+
 2009-01-08  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in:
